[gd_scene load_steps=18 format=2]

[ext_resource path="res://player_shader.shader" type="Shader" id=1]
[ext_resource path="res://Assets/Tilesets/Itch release raw tileset 01.png" type="Texture" id=2]
[ext_resource path="res://Scenes/DeathArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/EnemyRay.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Plomper.gd" type="Script" id=5]
[ext_resource path="res://Assets/Light/stomp circle.png" type="Texture" id=6]
[ext_resource path="res://Assets/Light/light.png" type="Texture" id=7]
[ext_resource path="res://Music/Sounds/Plomper walk.wav" type="AudioStream" id=8]
[ext_resource path="res://Music/Sounds/Plomper discharge.wav" type="AudioStream" id=9]
[ext_resource path="res://Music/Sounds/Plomper Build.wav" type="AudioStream" id=10]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 72, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 40, 72, 8, 8 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 128.0

[sub_resource type="CircleShape2D" id=6]
radius = 24.0

[sub_resource type="CircleShape2D" id=7]

[node name="Plomper" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )

[node name="DeathArea" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
shape = SubResource( 5 )
disabled = true

[node name="WarningLight" type="Light2D" parent="DeathArea"]
texture = ExtResource( 6 )
energy = 0.0

[node name="FlashLight" type="Light2D" parent="DeathArea"]
texture = ExtResource( 7 )
texture_scale = 6.0
color = Color( 0.92549, 0.619608, 0.321569, 1 )
energy = 0.0

[node name="PlayerFinderArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFinderArea"]
shape = SubResource( 6 )

[node name="EnemyRay" parent="." instance=ExtResource( 4 )]

[node name="Rest" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Fuse" type="Timer" parent="."]
one_shot = true

[node name="Flash" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WalkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="ChargeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
pitch_scale = 2.0

[node name="DischargeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )
[connection signal="area_entered" from="PlayerFinderArea" to="." method="_on_PlayerFinderArea_area_entered"]
[connection signal="timeout" from="Rest" to="." method="_on_Rest_timeout"]
[connection signal="timeout" from="Fuse" to="." method="_on_Fuse_timeout"]
[connection signal="timeout" from="Flash" to="." method="_on_Flash_timeout"]
